# portfolio

./: README.md
Academic_Projects/: README.md
Automatic_Person_Counter/apc/: CMakeLists.txt  README  apc_algorithm.h  configuration.h  main.c  pins.h
Automatic_Person_Counter/apc/Documentation/html/: annotated.html  annotated_dup.js  classes.html  dir_000004_000000.html  dir_000005_000001.html  dir_06801acbe2677d3305cd53c10ab9bf21.html  dir_06801acbe2677d3305cd53c10ab9bf21.js  dir_06801acbe2677d3305cd53c10ab9bf21_dep.map  dir_06801acbe2677d3305cd53c10ab9bf21_dep.md5  dir_525267a32de47566e44d44388e6b21db.html  dir_525267a32de47566e44d44388e6b21db.js  dir_525267a32de47566e44d44388e6b21db_dep.map  dir_525267a32de47566e44d44388e6b21db_dep.md5  dir_8242206c5171166b919e7f253d283c21.html  dir_8242206c5171166b919e7f253d283c21.js  dir_84a44b99a8f92f367212e4fd5af2a847.html  dir_84a44b99a8f92f367212e4fd5af2a847.js  dir_84a44b99a8f92f367212e4fd5af2a847_dep.map  dir_84a44b99a8f92f367212e4fd5af2a847_dep.md5  dir_e3d620c6b6fdb93ed3bc6186215bde2e.html  dir_e3d620c6b6fdb93ed3bc6186215bde2e.js  dir_e3d620c6b6fdb93ed3bc6186215bde2e_dep.map  dir_e3d620c6b6fdb93ed3bc6186215bde2e_dep.md5  dir_ea4d0936465f4d450369ebbc62161dd3.html  dir_ea4d0936465f4d450369ebbc62161dd3.js  dir_ea4d0936465f4d450369ebbc62161dd3_dep.map  dir_ea4d0936465f4d450369ebbc62161dd3_dep.md5  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_e.html  globals_enum.html  globals_eval.html  (+36 more)
(+1058 files in other folders)
